# nextjs-fastapi-webapp-fast

./: .gitignore  GEMINI.md  README.md  docker-compose.yml  workflow.md
.gemini/: features.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 27786d03a42b_add_vision_board_tables.py  6d320461baf8_add_note_item_resource.py  70cc017e8056_create_todoitem_model.py  77bfc5364ea8_make_deadline_nullable.py  bdf1a71b4783_drop_todoitem_table.py
backend/app/: cli.py  logging_config.py  main.py  mcp_server.py  secrets_loader.py
backend/app/crud/: crud_message.py  crud_note_item.py  crud_user.py  crud_vision_goal.py  crud_vision_subgoal.py
backend/app/db/: base.py  connections.py  utils.py
backend/app/models/: __init__.py  message.py  note_item.py  user.py  vision_goal.py  vision_subgoal.py
backend/app/utils/: hmac_validation.py
backend/fastapi_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: Header.js  Navbar.js
frontend/src/lib/: signedFetch.js
frontend/src/pages/: AboutPage.js  HomePage.js  _app.js  index.js  notes.js  todo.js  vision-board.js
frontend/src/router/: index.js
mcp/: Dockerfile  pyproject.toml
mcp/app/: logging_config.py  main.py  server.py
mcp/templates/backend/: crud.py.j2  endpoint.py.j2  model.py.j2  schema.py.j2
mcp/templates/frontend/: api_id.js.j2  api_index.js.j2  api_service.js.j2  component.js.j2  page.js.j2
(+26 files in other folders)
