[project]
name = "mcp-server"
version = "0.1.0"
description = "Master Control Program for code generation"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "Jinja2",
    "python-multipart",
    "mcp",
    "docker"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"